issue #33: fixed deploying JavaFX application and improved Jenkins pipeline